--- a/.gitignore
+++ b/.gitignore
@@ -223,3 +223,7 @@ Temporary Items
 # https://plugins.jetbrains.com/plugin/8053-azure-toolkit-for-intellij
 
 # End of https://www.toptal.com/developers/gitignore/api/webstorm,macos,jetbrains
+
+.idea
+
+.git
